<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/LightBlue"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_apk"
        style="@style/Buttons"
        android:id="@+id/button_read_apk"
        android:onClick="readApk"
        android:layout_marginTop="61dp"

        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_apps"
        android:id="@+id/button"
        android:onClick="getInstalledApp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/button_read_apk"
        android:layout_alignStart="@+id/button_read_apk"
        android:layout_alignLeft="@+id/button_read_apk"
        />

    <Button
        style="@style/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/button2"
        android:onClick="exit"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button_read_apk"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/from_apk"
        android:textColor="@color/navy"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_alignTop="@+id/button_read_apk"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignBottom="@+id/button_read_apk" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/remove_from"
        android:textColor="@color/navy"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/from_app"
        android:textColor="@color/navy"
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:layout_alignBottom="@+id/button"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignTop="@+id/button" />

</RelativeLayout>
